# colmap-fusion-framework

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md
cmake/: thirdparty_colmap3.11.cmake  thirdparty_rerun_sdk.cmake
docs/: how-to-cli-options.md  how-to-covariance.md  how-to-prepare-own-data.md  how-to-rerun-viewer.md  module_high_lvl_fusion.md  module_tightly_coupled_fusion.md
include/fusion_helper/: ceres_eval_utils.h  col_utils.h  cost_functions.h  cov_utils.h  frame_align_utils.h  fusion_evaluation_callback.h  fusion_iteration_callback.h  fusion_residuals_tracker.h  io.h  odom_edges.h  odom_edges_manager.h  rr_collection_adapters.h  rr_fusion_logging.h  rr_fusion_recorder.h  rr_sfm_logger.h  rr_utils.h  stream_utils.h  types.h
include/fusion_helper/tum_benchmark/: boost_support.hpp  eigen_support.hpp
include/high_level_fusion/: collection_adapters.h  fusion_graph_interface.h  rerun_interface.h
include/tightly_coupled_fusion/controllers/: incremental_fusion_pipeline.h
include/tightly_coupled_fusion/estimators/: bundle_adjustment.h  bundle_adjustment_original.h  fusion_bundle_adjustment.h
include/tightly_coupled_fusion/exe/: gui.h
include/tightly_coupled_fusion/sfm/: incremental_mapper.h
include/tightly_coupled_fusion/ui/: main_window.h
logs/: empty.txt
scripts/: stamp_file_from_tum.py  to_tum.py
scripts/dataset_processing/: 4seasons_result_to_tum.py  kitti_rename_imgs_to_stamped.py  kitti_traj_to_tum_stamped.py
scripts/eval/: evo_rpe_along_xyz.py
scripts/multi_project_auto_sfm_pipeline/: README.md  create_reduced_img_sets.py  multi_config.yaml  multi_project_config.yaml  multi_project_config_kitti.yaml  reconstruct_multiple_projects.py
scripts/multi_project_auto_sfm_pipeline/cfg/: project_kitti_low_q_easy_init.ini  project_tum4seasons.ini  project_tum4seasons_low_q.ini  project_zed2i.ini  project_zed2i_low_q.ini  project_zed2i_low_q_easy_init.ini  template_project_easy_init.ini  template_project_low_q.ini
scripts/odom_cov_estimation/: transform_SE3_cov.py
src/: main.cpp
src/fusion_helper/: CMakeLists.txt  ceres_eval_utils.cpp  col_utils.cpp  cov_utils.cpp  frame_align_utils.cpp  fusion_evaluation_callback.cpp  fusion_residuals_tracker.cpp  io.cpp  odom_edges.cpp  odom_edges_manager.cpp  rr_fusion_logging.cpp  rr_fusion_recorder.cpp  rr_sfm_logger.cpp  rr_utils.cpp
src/fusion_helper/colmap_model_manipulation/: sparsify_model.cpp
src/high_level_fusion/: CMakeLists.txt  fusion_graph_interface.cpp  metric_odom_bundle_adjust.cpp  rerun_interface.cpp
src/tightly_coupled_fusion/: CMakeLists.txt
src/tightly_coupled_fusion/controllers/: incremental_fusion_pipeline.cc
src/tightly_coupled_fusion/estimators/: bundle_adjustment.cc  bundle_adjustment_original.cc  fusion_bundle_adjustment.cc
src/tightly_coupled_fusion/exe/: colmap.cc  gui.cc
src/tightly_coupled_fusion/samples/: create_and_validate_odom_edges.cpp  default_bundle_adjuster_rerun.cpp  fusion_graph_ba_sanity_check.cpp  fusion_mapper_sanity_check.cpp  incremental_mapper_sanity_check.cpp  model_align.cpp  rerun_bundle_adjuster_sanity_check.cpp  run_default_bundle_adjuster_rerun.cpp  run_extrinsic_calibrator.cpp  run_fusion_bundle_adjuster.cpp  run_fusion_mapper.cpp  run_incremental_mapper_rerun.cpp
src/tightly_coupled_fusion/sfm/: incremental_mapper.cc
src/tightly_coupled_fusion/ui/: main_window.cc
