cmake_minimum_required(VERSION 3.16)

# define this tightly_coupled_fusion subdirectory as library
set(TIGHTLY_COUPLED_FUSION_SOURCES
    estimators/bundle_adjustment.cc
    sfm/incremental_mapper.cc
)
add_library(tightly_coupled_fusion ${TIGHTLY_COUPLED_FUSION_SOURCES})
target_include_directories(tightly_coupled_fusion PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(tightly_coupled_fusion PUBLIC ${PROJECT_DEPENDENCIES};fusion_helper) # add dependency found in toplevel cmake

# add executable for tightly_coupled_fusion
add_executable(model_align samples/model_align.cpp)
target_link_libraries(model_align tightly_coupled_fusion)
add_executable(default_bundle_adjuster_rerun samples/default_bundle_adjuster_rerun.cpp)
target_link_libraries(default_bundle_adjuster_rerun tightly_coupled_fusion)
add_executable(fusion_graph_ba_sanity_check samples/fusion_graph_ba_sanity_check.cpp)
target_link_libraries(fusion_graph_ba_sanity_check tightly_coupled_fusion)
add_executable(incremental_mapper_sanity_check samples/incremental_mapper_sanity_check.cpp)
target_link_libraries(incremental_mapper_sanity_check tightly_coupled_fusion)
add_executable(fusion_mapper_sanity_check samples/fusion_mapper_sanity_check.cpp)
target_link_libraries(fusion_mapper_sanity_check tightly_coupled_fusion)
