cmake_minimum_required(VERSION 3.16)

# define this tightly_coupled_fusion subdirectory as library
set(TIGHTLY_COUPLED_FUSION_SOURCES
    estimators/bundle_adjustment.cc
    sfm/incremental_mapper.cc
)
add_library(tightly_coupled_fusion ${TIGHTLY_COUPLED_FUSION_SOURCES})
target_include_directories(tightly_coupled_fusion PUBLIC ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(tightly_coupled_fusion PUBLIC ${PROJECT_DEPENDENCIES};fusion_helper) # add dependency found in toplevel cmake

# add executable for tightly_coupled_fusion
add_executable(model_align samples/model_align.cpp)
target_link_libraries(model_align tightly_coupled_fusion)
add_executable(run_default_bundle_adjuster_rerun samples/run_default_bundle_adjuster_rerun.cpp)
target_link_libraries(run_default_bundle_adjuster_rerun tightly_coupled_fusion)
add_executable(run_fusion_bundle_adjuster samples/run_fusion_bundle_adjuster.cpp)
target_link_libraries(run_fusion_bundle_adjuster tightly_coupled_fusion)
add_executable(run_incremental_mapper_rerun samples/run_incremental_mapper_rerun.cpp)
target_link_libraries(run_incremental_mapper_rerun tightly_coupled_fusion)
add_executable(run_fusion_mapper samples/run_fusion_mapper.cpp)
target_link_libraries(run_fusion_mapper tightly_coupled_fusion)
